<resources>
    <string name="alert_notifications">Warning: received notifications are stored on your device, if you uninstall this app you will lose this data.</string>
    <string name="app_name">Nice Places</string>
    <string name="accept">Accept</string>
    <string name="all_the_places">All the places</string>
    <string name="areas">Areas</string>
    <string name="close_to_save">Close this activity to save changes.</string>
    <string name="connection_error">Connection error, impossible to download data.</string>
    <string name="contact_us">Contact us</string>
    <string name="decline">Decline</string>
    <string name="description">Description</string>
    <string name="description_not_available">Description not available.</string>
    <string name="empty_list">Empty list.</string>
    <string name="empty_list2">To add places to this list choose a place, open its info screen and add it to your visited places, the places that you want to visit or your favorite places.</string>
    <string name="explore">Explore</string>
    <string name="favorite_place">Favorite place</string>
    <string name="favorite_places">Favorite\nplaces</string>
    <string name="find_out_more">Find out more</string>
    <string name="from_wikipedia">From Wikipedia</string>
    <string name="go">Go!</string>
    <string name="highlights">Highlights</string>
    <string name="history">History</string>
    <string name="impossible_load_location">The current location can not be loaded because location services are deactivated. The last known location will be loaded.</string>
    <string name="info1">Nice Places is an app that let you discover places of historical, cultural and artistic interest close to you, offering a description of them to satisfy your curiosity.\nNot only, you will also have the opportunity to travel virtually and move along the peninsula, to cross itineraries, landscapes, cities and remote places, discovering what makes Italy, from this point of view, one of the richest country in the world.</string>
    <string name="info2">In this version you can use three modes:\n&#8226; <b>Places around you</b> let you discover places of interest closest to you, you can turn on navigation to reach those places or read the description.\n&#8226; <b>Explore</b> with which you can view the list of all places divided by region and by area.\n&#8226; <b>New places</b> that contains a list of the latest places inserted and updated.</string>
    <string name="info3">Compared to the previous version lots of new places and description have been inserted</string>
    <string name="info4">Follow us on social network to support our project and to don\'t miss updates!</string>
    <string name="info5">If you want to report a problem, un advice or have further information on the project you can send a message to our Facebook or Instagram accounts or send an e-mail to the following address.</string>
    <string name="intro1">Thank you for downloading Nice Places! This app let you discover places of historical, cultural and artistic interest close to you, offering a description of them to satisfy your curiosity.\nNot only, you will also have the opportunity to travel virtually and move along the peninsula, to cross itineraries, landscapes, cities and remote places, discovering what makes Italy, from this point of view, one of the richest country in the world.</string>
    <string name="intro2">To get started, allow your device to read your location and calculate which locations are closest and how far they are.</string>
    <string name="intro3">From the main menu select \"Places around you\". A map will be displayed with your position and the nearest places.</string>
    <string name="intro4">Touch the place you are interested in from the list at the bottom: it will be highlighted on the map.</string>
    <string name="intro5">Touch the marker with the photo displayed on the map to open the card with the details of the place.</string>
    <string name="intro6">Touching the button \"Start navigation\" you can open the navigator.</string>
    <string name="intro7">Use the buttons on the tab of each place to store the places you have visited, those you would like to visit and your favorites!</string>
    <string name="intro8">That\'s all,\nhave a good fun!</string>
    <string name="intro_update">In this update Nice Places introduces two new features. \n\n&#8226; All notifications received now will be stored and accessible from the <b>notification center</b>, available from the bell at the top right of the main menu screen. Thanks to this function, you will be able to review old notifications and retrieve those that may have been deleted by mistake. \n\n&#8226; In the <b>Explore</b> section, a <b>search bar</b> has been inserted to make it easier to find a place, just type its name or some words found in its description. \n\n&#8226; Improvements have been made to the stability and performance of the application.</string>
    <string name="like_place">Do you like this place? Like and share it!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="location_disabled">Location disabled</string>
    <string name="location_loading">Loading location</string>
    <string name="location_retrieving">The app is retrieving your location&#8230;</string>
    <string name="location_update">Location update</string>
    <string name="minimum_distance">Minimum distance</string>
    <string name="more_places_available_soon">More places available soon!</string>
    <string name="more_information">More information</string>
    <string name="name">Name</string>
    <string name="new_places_are_waiting">New places are waiting for you!</string>
    <string name="new_places">New places</string>
    <string name="new_on_version">What\'s new in this version</string>
    <string name="news">News</string>
    <string name="next">Next</string>
    <string name="nearest_places">Nearest places</string>
    <string name="no_thanks">No, thanks</string>
    <string name="notifications">Notifications</string>
    <string name="page_written_by">This page is written by</string>
    <string name="photo">Photo: %1$s</string>
    <string name="place_ive_visited">Place I have visited</string>
    <string name="place_i_want_to_visit">Place I want to visit</string>
    <string name="places_around_you">Places around you</string>
    <string name="places_in_radius_of">Places in radius of %1$s km (%2$d)</string>
    <string name="places_of_day">Place of the day</string>
    <string name="places_to_visit">Places\nto visit</string>
    <string name="privacy_accept">I have read and accepted the privacy policy of Nice Places.</string>
    <string name="privacy_invite">To use this application you must read and accept our privacy policy.</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="quiz" translatable="false">Quiz</string>
    <string name="rate">Rate it</string>
    <string name="rate_app">Rate Nice Places</string>
    <string name="rate_dialog_msg">If you enjoy using Nice Places, please take a moment to rate it. Thanks for your support!</string>
    <string name="read_policy">Read the policy</string>
    <string name="regions">Regions</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="settings">Settings</string>
    <string name="sources">Sources: %1$s</string>
    <string name="search">Search for a place&#8230;</string>
    <string name="search_radius">Search radius</string>
    <string name="settings1">The places shown on map are those whose distance (in kilometers as the crow flies from your position) is less or equal than the one indicated here.</string>
    <string name="settings2">When you use the function \"Places around you\" the app receives a location update every time the time interval (in seconds) indicated above elapses or the new position is located at a distance (in meters) greater than the one indicated above.\nSet these values to adjust the frequency of update of position and therefore of the list of places.</string>
    <string name="skip">Skip</string>
    <string name="start_navigation">Start navigation</string>
    <string name="support_us">Support us!</string>
    <string name="time_interval">Time interval</string>
    <string name="turn_on_location">Turn on\nlocation services</string>
    <string name="view_tutorial">View the tutorial</string>
    <string name="visited_places">Visited\nplaces</string>
    <string name="welcome_to">Welcome to\nNice Places!</string>
    <string name="whats_featured">Features</string>

    <string-array name="latest_places">
        <item>Latest inserted</item>
        <item>Latest updated</item>
    </string-array>
</resources>