<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_version_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="v--"
            android:textColor="#aa000000"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/textview_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="www.niceplaces.it"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info1"
            android:textColor="#dd000000"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.2" />

        <Button
            android:id="@+id/button_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/view_tutorial"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/whats_featured"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info2"
            android:textColor="#dd000000"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/new_places_are_waiting"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info3"
            android:textColor="#dd000000"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/support_us"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info4"
            android:textColor="#dd000000"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebook_dark"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"
                android:id="@+id/imageview_facebook"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/instagram_dark"
                android:id="@+id/imageview_instagram"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/twitter_dark"
                android:id="@+id/imageview_twitter"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/info5"
            android:textColor="#dd000000"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.2" />

        <Button
            android:id="@+id/button_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="niceplacesit@gmail.com"/>

    </LinearLayout>

</ScrollView>
