<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/security" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.2"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/privacy_invite"
                android:textColor="#dd000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_menu_button"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_margin="10dp"
                android:text="@string/read_policy"
                android:textColor="#fff"
                android:textSize="16sp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/checkbox_privacy"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/privacy_accept"
                android:textColor="#dd000000"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#fff" >

        <Button
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/accept"
            android:enabled="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorDisabled" />

        <Button
            android:id="@+id/button_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/decline"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

</LinearLayout>