<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_place_of_day"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/places_of_day"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <include
                layout="@layout/layout_loading"
                android:id="@+id/layout_loading_place_of_day"
                android:visibility="gone" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/background"
                android:scaleType="centerCrop"
                android:id="@+id/place_of_day_image"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_of_day_name"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="20dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                    android:text="@string/name"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="7dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/marker_places"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/place_of_day_area"
                        android:layout_marginStart="2dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_marginLeft="2dp"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/name"
                        android:ellipsize="end"
                        android:maxLines="5"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/place_of_day_desc"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/description_not_available"
                    android:ellipsize="end"
                    android:maxLines="5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/find_out_more" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regions"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_loading"
            android:id="@+id/layout_loading_regions"
            android:visibility="gone" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listview_areas"/>

    </LinearLayout>

</LinearLayout>
